# ai_gent-_email_replier-

./: .gitignore  ARCHITECTURE.md  MODULES.md  README.md  SETUP_GUIDE.md  STRUCTURE.md  app.py  main.py  pyproject.toml
features/retrivier/: main.py  main_1.ipynb
features/sendmail/: send.py
queue/: docker-compose.yml  worker.py
static/: style.css
templates/: index.html
