[project]
name = "email-auto-responser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client==2.170.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "rq>=2.9.0",
    "valkey>=6.1.1",
    "fastapi[standard]>=0.104.0",
    "uvicorn>=0.24.0",
]
